refactor Widget API to support optional filtering by name and description
